--- a/index.css
+++ b/index.css
@@ -66,4 +66,16 @@ p {
 }
 body {
   font-family: var(--font-family-Montserrat);
+  background-color: var(--color-cream);
+}
+div.card {
+  margin: auto;
+  border-radius: 15pt;
+}
+div.card > div.card-header {
+  background-image: url("./images/image-product-mobile.jpg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  width: 100%;
+  height: 320px;
 }
