--- a/index.css
+++ b/index.css
@@ -60,22 +60,106 @@
 
 p {
   font-size: var(--font-size-p);
+  color: var(--color-dark-grayish-blue);
 }
 * {
   outline: 1px solid pink;
 }
+html,
 body {
   font-family: var(--font-family-Montserrat);
   background-color: var(--color-cream);
 }
+
+/* #region Shared Component */
+.flex {
+  display: flex;
+}
+.justify-center {
+  justify-content: center;
+}
+.align-items-center {
+  align-items: center;
+}
+.flex-row {
+  flex-direction: row;
+}
+.flex-column {
+  flex-direction: column;
+}
+.grid {
+  display: grid;
+}
+/* #endregion Shared Component */
+
 div.card {
-  margin: auto;
   border-radius: 15pt;
 }
 div.card > div.card-header {
-  background-image: url("./images/image-product-mobile.jpg");
+  margin: 0;
+  padding: 0;
+  border-top-left-radius: 15pt;
+  border-top-right-radius: 15pt;
+  background-color: var(--color-white);
+}
+div.card > div.card-header > img {
+  border-top-left-radius: 15pt;
+  border-top-right-radius: 15pt;
+  background-size: contain;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-position: 50% 50%;
+}
+div.card > div.card-body {
+  background-color: var(--color-white);
+  padding-left: 1rem;
+  padding-right: 1rem;
+  margin: 0;
+  border-bottom-left-radius: 15pt;
+  border-bottom-right-radius: 15pt;
+}
+div.card > div.card-body > p.product-category {
+  margin: 0;
+  padding-top: 1rem;
+  padding-bottom: 0.5rem;
+  text-transform: uppercase;
+  letter-spacing: 5pt;
+  font-variation-settings: "wght" 600;
+  color: var(--color-dark-grayish-blue);
+}
+div.card > div.card-body > h1.product-title {
+  font-family: "Fraunces";
+  font-size: 24pt;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+div.card > div.card-body > p.product-desc {
+  font-variation-settings: "wght" 500;
+  letter-spacing: 0.5pt;
+  margin-bottom: 0.5rem;
+  color: var(--color-dark-grayish-blue);
+}
+div.card > div.card-body > div.flex > h1.product-price {
+  font-family: "Fraunces";
+  color: var(--color-dark-cyan);
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+div.card > div.card-body > div.flex > p.product-discount {
+  text-decoration: line-through;
+  margin-left: 1rem;
+}
+div.card > div.card-body > button.product-button {
   width: 100%;
-  height: 320px;
+  border: none;
+  background: none;
+  border-radius: 5pt;
+  padding: 0.5rem;
+  margin-bottom: 1rem;
+  font-weight: 700;
+  color: var(--color-white);
+  background-color: var(--color-dark-cyan);
+}
+div.card > div.card-body > button.product-button > img.icon-cart {
+  margin-right: 0.5rem;
+  vertical-align: middle;
 }
